--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
 
     <!-- FOR ALIGNMENT -->
-    <style>
+    <!-- <style>
         div {
             border: solid black 1px;
             box-sizing: border-box;
         }
-    </style>
+    </style> --> 
 
 </head>
 
@@ -35,12 +35,12 @@
 
             <label for="button-input" class="h5">Add a GIF button</label><br>
             <input type="text" id="button-input" class=""><br>
-            <input id="select-GIF" class="btn btn-danger" type="submit" value="ADD BUTTON"><br>
+            <input id="add-button" class="btn btn-danger" type="submit" value="ADD BUTTON"><br>
             <div id="btnArea">BUTTONS GO HERE</div>
         </div>
 
         <!-- GIF AREA -->
-        <div class="col-md-8 d-flex flex-wrap justify-content-around" id="GIFArea">GIFS GO HERE<br>
+        <div class="col-md-8 d-flex flex-wrap justify-content-around" id="GIFArea"><br>
         </div>
 
 
